# stablecoin-simulation

./: .gitignore  pyproject.toml  simulation.ipynb
model/: policy_functions.py  state_update_functions.py  state_variables.py
utils/: helper.py  metrics.py  price_simulation.py
