[tool.poetry]
name = "stablecoin-simulation"
version = "0.1.0"
description = ""
authors = ["Krystian Gaus <krystian.gaus@sva.de>", "Thomas Gehrmann <thomas.gehrmann@sva.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.12.0"
plotly = "^5.19.0"
radcad = "^0.13.0"
typing-extensions = "^4.10.0"
nbformat = "^5.9.2"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
